change to phaser

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-
+<script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
+<script src="./lib/phaser.min.js"></script>
+<script src="./lib/game.js"></script>
 </head>
 <body>
-  <div id="wrapper">
-    <h1>Platformer</h1>
-    <div id="score"></div>
-    <canvas width="1200" height="800" id="canvas">
-    </canvas>
-    <div id="control">Controls:</div>
-  </div>
+
 </body>
 
 
