--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
 <script src="./lib/phaser.min.js"></script>
+
 <script src="./lib/helpers/events/event-emitter.js"></script>
+<script src="./lib/helpers/punch-hitdetection.js"></script>
+
 <script src="./lib/background.js"></script>
 <script src="./lib/player.js"></script>
 <script src="./lib/badguy_1.js"></script>
